--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <style>
             h1 { font-family: 'Open Sans', sans-serif; }
             h2 { font-family: 'Open Sans', sans-serif; }
-            
+
         </style>
     </head>
 
     <body>
         <h1>Kevin Wong</h1> 
-        <p></p>
+        <p>Senior Student at Brooklyn College</p>
     </body>
 </html>
