--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset ="utf-8">
         <title>Kevin Wong</title>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <style>
-            h1 { font-family: 'Open Sans', sans-serif; }
-            h2 { font-family: 'Open Sans', sans-serif; }
+        <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">        <style>
+            html, body { height: 100% }
+            html { display: table; margin: auto; }
+            body { display: table-cell; vertical-align:middle; }
+
+            h1 { font-family: 'Lora', serif; font-size:24; }
+            h2 { font-family: 'Lora', serif; font-size:22; }
+            p { font-family: 'Lora' serif; font-size:20; }
 
         </style>
     </head>
