--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset ="utf-8">
         <title>Kevin Wong</title>
-        <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">        <style>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Open+Sans&display=swap" rel="stylesheet">
+
+        <style>
             html, body { height: 100% }
             html { display: table; margin: auto; }
             body { display: table-cell; vertical-align:middle; }
 
             h1 { font-family: 'Lora', serif; font-size:24; }
             h2 { font-family: 'Lora', serif; font-size:22; }
-            p { font-family: 'Lora' serif; font-size:20; }
+            p { font-family: 'Open Sans', sans-serif; font-size:20; }
 
         </style>
     </head>
