--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
             body { display: table-cell; vertical-align:middle; }
 
             h1 { font-family: 'Lora', serif; font-size:24; }
-            h2 { font-family: 'Lora', serif; font-size:22; }
             p { font-family: 'Open Sans', sans-serif; font-size:20; }
 
         </style>
     </head>
-
     <body>
         <h1>Kevin Wong</h1> 
         <p>Senior Student at Brooklyn College</p>
+        <a href="https://github.com/KevinWong07">Github Projects and Labs</a>
+        <a href="https://www.linkedin.com/in/kw-kevin-wong/">LinkedIn Portfolio</a>
     </body>
 </html>
