--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         </style>
     </head>
-    <body>
+    <body style="background-color:#f1e39b;">
         <h1>Kevin Wong</h1> 
         <p>Senior Student at Brooklyn College</p>
         <a href="https://github.com/KevinWong07">Github Projects and Labs</a>
