--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <body style="background-color:#f1e39b;">
         <h1>Kevin Wong</h1> 
         <p>Senior Student at Brooklyn College</p>
-        <a href="https://github.com/KevinWong07">Github Projects and Labs</a>
-        <a href="https://www.linkedin.com/in/kw-kevin-wong/">LinkedIn Portfolio</a>
+        <ul>
+        <li><a href="https://github.com/KevinWong07">Github Projects and Labs</a></li>
+        <li><a href="https://www.linkedin.com/in/kw-kevin-wong/">LinkedIn Portfolio</a></li>
+        </ul>
     </body>
 </html>
