Updated for easier reading + Added social media links

--- a/index.html
+++ b/index.html
@@ -6,21 +6,39 @@
         <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Open+Sans&display=swap" rel="stylesheet">
 
         <style>
-            html, body { height: 100% }
-            html { display: table; margin: auto; }
-            body { display: table-cell; vertical-align:middle; }
+            html, body { 
+                height: 100% 
+                }
+            html { 
+                display: table; 
+                margin: auto; 
+                }
+            body { 
+                display: table-cell; 
+                vertical-align:middle; 
+                }
 
-            h1 { font-family: 'Lora', serif; font-size:24; }
-            p { font-family: 'Open Sans', sans-serif; font-size:20; }
+            h1 { 
+                font-family: 'Lora', serif; font-size:24; 
+                }
+            p { 
+                font-family: 'Open Sans', sans-serif; font-size:20; 
+                }
 
         </style>
     </head>
+
     <body style="background-color:#f1e39b;">
         <h1>Kevin Wong</h1> 
         <p>Senior Student at Brooklyn College</p>
         <ul>
-        <li><a href="https://github.com/KevinWong07">Github Projects and Labs</a></li>
-        <li><a href="https://www.linkedin.com/in/kw-kevin-wong/">LinkedIn Portfolio</a></li>
+            <li><a href="https://github.com/KevinWong07">Github Projects and Labs</a></li>
+            <li><a href="https://www.linkedin.com/in/kw-kevin-wong/">LinkedIn Portfolio</a></li>
+        </ul>
+        <p>Find me on social media!</p>
+        <ul>
+            <li><a href="https://twitter.com/InsaneFuckedUp">Twitter</a></li>
+            <li><a href="https://discord.com">Discord: Insane#6324</a></li>
         </ul>
     </body>
 </html>
