--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>Find me on social media!</p>
         <ul>
             <li><a href="https://twitter.com/InsaneFuckedUp">Twitter</a></li>
-            <li><a href="https://discord.com">Discord: Insane#6324</a></li>
+            <li><a href="https://discord.com">Discord: </a>Insane#6324</li>Insane#6324
         </ul>
     </body>
 </html>
