--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             h1 { 
                 font-family: 'Lora', serif; font-size:24; 
                 }
+            h2 { 
+                font-family: 'Lora', serif; font-size:22; 
+                }
             p { 
                 font-family: 'Open Sans', sans-serif; font-size:20; 
                 }
@@ -30,7 +33,8 @@
 
     <body style="background-color:#f1e39b;">
         <h1>Kevin Wong</h1> 
-        <p>Senior Student at Brooklyn College</p>
+        <h2>Senior Student at Brooklyn College</h2>
+        <p>
         <ul>
             <li><a href="https://github.com/KevinWong07">Github Projects and Labs</a></li>
             <li><a href="https://www.linkedin.com/in/kw-kevin-wong/">LinkedIn Portfolio</a></li>
@@ -38,7 +42,8 @@
         <p>Find me on social media!</p>
         <ul>
             <li><a href="https://twitter.com/InsaneFuckedUp">Twitter</a></li>
-            <li><a href="https://discord.com">Discord: </a>Insane#6324</li>Insane#6324
+            <li><a href="https://discord.com">Discord: </a>Insane#6324</li>
         </ul>
+        </p>
     </body>
 </html>
