Added stylesheet and updated html

--- a/index.html
+++ b/index.html
@@ -4,45 +4,41 @@
         <meta charset ="utf-8">
         <title>Kevin Wong</title>
         <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Open+Sans&display=swap" rel="stylesheet">
-
-        <style>
-            html, body { 
-                height: 100% 
-                }
-            html { 
-                display: table; 
-                margin: auto; 
-                }
-            body { 
-                display: table-cell; 
-                vertical-align:middle; 
-                }
-
-            h1 { 
-                font-family: 'Lora', serif; font-size:24; 
-                }
-            h2 { 
-                font-family: 'Lora', serif; font-size:22; 
-                }
-            p { 
-                font-family: 'Open Sans', sans-serif; font-size:20; 
-                }
-
-        </style>
+        <link href="styles.css" rel="stylesheet">
     </head>
 
-    <body style="background-color:#f1e39b;">
+    <body>
         <h1>Kevin Wong</h1> 
         <h2>Senior Student at Brooklyn College</h2>
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">Portfolios</button>
+            <div id="portfolios" class="dropdown-content">
+              <a href="https://github.com/KevinWong07">Github</a>
+              <a href="https://www.linkedin.com/in/kw-kevin-wong/">LinkedIn</a>
+            </div>
+        </div>
+        <script>
+            function myFunction() {
+                document.getElementById("portfolios").classList.toggle("show");
+                }
+                window.onclick = function(event) {
+                    if (!event.target.matches('.dropbtn')) {
+                        var dropdowns = document.getElementsByClassName("dropdown-content");
+                        var i;
+                        for (i = 0; i < dropdowns.length; i++) {
+                            var openDropdown = dropdowns[i];
+                            if (openDropdown.classList.contains('show')) {
+                                openDropdown.classList.remove('show');
+                            }
+                        }
+                    }
+                }
+        </script>
         <p>
-        <ul>
-            <li><a href="https://github.com/KevinWong07">Github Projects and Labs</a></li>
-            <li><a href="https://www.linkedin.com/in/kw-kevin-wong/">LinkedIn Portfolio</a></li>
-        </ul>
         <p>Find me on social media!</p>
         <ul>
-            <li><a href="https://twitter.com/InsaneFuckedUp">Twitter</a></li>
-            <li><a href="https://discord.com">Discord:</a> Insane#6324</li>
+            <li><a href="https://twitter.com/InsaneFuckedUp"><img src="resources/Twitter_Social_Icon.png"></a></li>
+            <li><a href="https://discord.com"><img src="resources/Discord-Logo-Color.png"></a> Insane#6324</li>
         </ul>
         </p>
     </body>
