--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>
         <p>Find me on social media!</p>
         <ul>
-            <li><a href="https://twitter.com/InsaneFuckedUp"><img src="resources/Twitter_Social_Icon.png" width="26" height="26"></a></li>
+            <li><a href="https://twitter.com/InsaneFuckedUp"><img src="resources/Twitter_Social_Icon.png" width="26" height="26"></a> @InsaneFuckedUp</li>
             <li><a href="https://discord.com"><img src="resources/Discord-Logo-Color.png" width="26" height="26"></a> Insane#6324</li>
         </ul>
         </p>
