--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <h1>Kevin Wong</h1> 
         <h2>Senior Student at Brooklyn College</h2>
+        <h2>College Assistant at KBCC Student Helpdesk</h2>
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Portfolios</button>
             <div id="portfolios" class="dropdown-content">
