--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Kevin Wong</title>
         <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Open+Sans&display=swap" rel="stylesheet">
         <link href="skeleton.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
     </head>
 
     <body>
