--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
     <body>
         <h1>Kevin Wong</h1> 
-        <h2>Senior Student at Brooklyn College</h2>
-        <h2>College Assistant at KBCC Student Helpdesk</h2>
+        <h2>IT Support Assistant at LaGuardia Community College</h2>
         <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Portfolios</button>
+            <button onclick="myFunction()" class="dropbtn">Websites</button>
             <div id="portfolios" class="dropdown-content">
               <a href="https://github.com/KevinWong07">Github</a>
               <a href="https://www.linkedin.com/in/kw-kevin-wong/">LinkedIn</a>
@@ -38,7 +37,6 @@
         <p>
         <p>Find me on social media!</p>
         <ul>
-            <li><a href="https://twitter.com/InsaneFuckedUp"><img src="resources/Twitter_Social_Icon.png" width="26" height="26"></a> @InsaneFuckedUp</li>
             <li><a href="https://discord.com"><img src="resources/Discord-Logo-Color.png" width="26" height="26"></a> undoubtedly_insane</li>
         </ul>
         </p>
